Setup OAuth2 to get user profile information.
